complete home screen

--- a/assets/langs/ar.json
+++ b/assets/langs/ar.json
@@ -39,8 +39,77 @@
       "description": "تقديم طلب خدمات الإقامة والتأشيرات المطلوبة."
     },
     "applyNow": "تقديم الآن"
+  },
+  "step": "خطوة",
+  "services_screen": {
+    "section1": {
+      "title": "كل ما تحتاجه في مكان واحد",
+      "point1": "بيئة عمل مريحة",
+      "description1": "بيئة تحية متميزة تلبي جميع متطلبات عملك.",
+      "point2": "دعم دائم 24/7",
+      "description2": "خدمة فائقة الجودة لجميع عملائنا.",
+      "point3": "دعم متعدد اللغات",
+      "description3": "تحدث باللغة التي تعرفها ونحن متاحون لك.",
+      "point4": "لا حاجة للحضور بنفسك",
+      "description4": "يمكنك إجراء العملية كاملة وأنت في بلدك."
+    },
+    "section2": {
+      "title": "أعلى خدمة بأقل تكلفة",
+      "point1": "يمكنك الاعتماد على FirstAmazeGroup في إتمام جميع إجراءات تأسيس شركة في دبي في وقت قياسي إذا كانت جميع مستنداتك جاهزة، دون رسوم مخفية ودون أي صعوبات.",
+
+      "point2": "انطلق في سوق الإمارات بثقة وأسس مشروعك التجاري الآن مع حلولنا وخدماتنا المرنة التي تلبي جميع متطلبات أعمالكم."
+    },
+    "button": "تعرف على المزيد"
+  },
+  "info_section": {
+    "title": "هي FirstAmazeGroup طريقك الأمثل لبدء أعمالك",
+    "paragraph1": "شركة FirstAmazeGroup متخصصة في تأسيس الشركات وتطوير الأعمال نسعى لتقديم الدعم الكامل للمستثمرين وأصحاب المشاريع لمساعدتهم في تأسيس أعمالهم في دبي بتوفير مجموعة متكاملة من الخدمات.",
+    "paragraph2": "نهدف إلى تقديم حلول مبتكرة لإرشاد عملائنا المحليين والدوليين ووضعهم على المسار الصحيح.",
+    "paragraph3": "بصفتنا شركة رائدة في تأسيس الشركات وتقديم حلول الأعمال في دبي، يمكن لفريق استشاريي الأعمال في FirstAmazeGroup مساعدتك في تسريع عملية التأسيس.",
+    "paragraph4": "يمكنك الاعتماد على FirstAmazeGroup في إتمام جميع إجراءات تأسيس شركة في دبي في وقت قياسي إذا كانت جميع مستنداتك جاهزة، دون رسوم مخفية ودون أية صعوبات.",
+    "read_more": "قراءة المزيد"
+  },
+
+  "services": {
+    "explore_market_requirements": {
+      "title": "اكتشف متطلبات السوق",
+      "subtitle": "يمكن لفريق استشاري الأعمال لدى ITQAN مساعدتك في تسريع عملية تأسيس شركتك وكذلك حجز اسم تجاري."
+    },
+    "invest_in_dubai": {
+      "title": "استثمر في دبي",
+      "subtitle": "تعد دبي مركزًا عالميًا للأعمال يعزز النمو من خلال ضمان أعلى مستويات الكفاءة والأمان والازدهار لتحقيق مستويات غير مسبوقة من التوسع السريع."
+    },
+    "flexible_workspaces": {
+      "title": "مساحات عمل مرنة وبنية تحتية قوية",
+      "subtitle": "نحن نقدم مساحات عمل مميزة تلبي جميع متطلبات أعمالك."
+    }
+  },
+
+  "team_section": {
+    "title": "مستشاري الأعمال في FirstAmazeGroup",
+    "description": "يكرس فريقنا المكون من أفضل الخبراء في مجال الاستشارات، جلّ فكرهم وخبراتهم وقدراتهم التقنية لدعم العملاء في الإمارات المتحدة. هدفنا أيضاً توفير الحلول التي تساعد عملائنا المحليين والدوليين بنجاح مع تحديات قانونية وتنظيمية ومالية في مجالات مختلفة.",
+    "role1": "مستشار أعمال",
+    "role2": "دور آخر",
+    "button": "فريق عمل FirstAmazeGroup"
+  },
+  "contact_form": {
+    "promise_title": "وعد من FirstAmazeGroup لك",
+    "subtitle": "بصفتنا شركة رائدة في تأسيس الشركات، فإن فريق مستشاري FirstAmazeGroup يمكنهم مساعدتك في تسريع عملية تأسيس شركتك. يمكنك الاعتماد على FirstAmazeGroup للتعامل مع جميع الإجراءات بكفاءة.",
+    "ceo_name": "أحمد محمد شريف - رئيس مجلس الإدارة",
+    "contact_us": "تواصل معنا",
+    "support_24_7": "دعم دائم 7/24",
+    "name": "الاسم",
+    "email": "البريد الإلكتروني",
+    "phone": "رقم الهاتف",
+    "country": "الجنسية",
+    "message": "رسالة",
+    "submit": "إرسال",
+    "get_support": "احصل على دعم خاص لعملك",
+    "contact_us_footer": "← تواصل معنا"
   }
-
-
 }
+
+
+
+
 
